src/main/java/com/example/demo/error/validation/ResourceNotFoundException.java

package com.example.demo.error.validation;

import lombok.Getter;
import org.springframework.http.HttpStatus;
import org.springframework.web.bind.annotation.ResponseStatus;

@Getter
@ResponseStatus(value = HttpStatus.NOT_FOUND)
public class ResourceNotFoundException extends RuntimeException {
	
    private final String resourceName;
    private final String fieldName;
    private final String fieldValue;

    public ResourceNotFoundException(final String resourceName,
			final String fieldName, final String fieldValue) {
		
        super(
			resourceName + " not found with "
			+ fieldName + " : '" + resourceName + "'"
		);
        
		this.resourceName = resourceName;
        this.fieldName = fieldName;
        this.fieldValue = fieldValue;
    }
}
